src/index.css
@font-face {
  font-family: "Din Condensed";
  src: url('/fonts/DinCondensed/D-DINCondensed.ttf')
}

@font-face {
  font-family: "Plush Regular";
  src: url('/fonts/PlushRegular/Plush-Regular.otf')
}

*,
*::before,
*::after {
  margin: 0;
  padding:0;
  box-sizing: border-box;
}

html {
  font-family: 'Din Condensed', sans-serif;
  font-family: 'Plush Regular', sans-serif;
}

body {
  width: 100%;
}

.site-wrapper {
  padding: 0.5rem;
}

.section-container {
  padding: 0.66rem;
  margin: 1rem 0;
  outline: 2px solid slateblue;
  border-radius: 6px;
  /* max-width: 1440px; */
}

.section-container h2 {
  padding-left: 8px;
}

.tiles-container-section {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
}

.games-selection-container {
  display: grid;
  gap: 12px;
  padding: 1rem;
  grid-template-columns: repeat(11, 1fr);
  /* grid-auto-flow: column; */
  /* grid-auto-flow: dense; */
  /* grid-auto-columns: 21%; */
  overflow-x: auto;
  overscroll-behavior-inline: contain;
}

.game-selection-tile {
  padding: 0.5rem;
  min-width: 116px;
  max-width: 220px;
  aspect-ratio: 0.70;
  border-radius: 8px;
  background-color: whitesmoke;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  container-type: inline-size;
  /* gap: 2px; */
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}

.more-tile {
  color: coral;
  justify-content: center;
  font-size: 1.6rem;
}

.more-tile p {
  font-size: 14cqw;
  margin: 0.33rem 1rem;
  text-align: center;
}

.game-selection-tile > img {
  /* min-width: 100px; */
  width: auto;
  aspect-ratio: 1;
  inline-size: 100%;
  object-fit: cover;
  /* max-width: 100%;
  max-height: 100%; */
}

.game-selection-tile-info {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
  width: 100%;
  padding: 0 0.25rem;
  color: coral;
  font-size: 8cqw;
}

.star-rating-num {
  position: relative;
  top: 1px;
  padding: 0 2px;
  line-height: 2;
  font-size: 12cqw;
}

.game-selection-tile-title {
  width: 95cqw;
  font-size: 14cqw;
  color: coral;
  text-wrap: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  text-align: center;
}

.snaps-inline {
  scroll-snap-type: inline mandatory;
}

.snaps-inline > * {
  scroll-snap-align: start;
}

/* PLAY PAGE */

.play-page {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  text-align: center;
}

.game-play-section {
  display: flex;
  flex-direction: column;
  max-width: calc(3 * 8px + 4 * 100px);
  margin: 0.33rem auto 0;
  aspect-ratio: 1; 
}

.correct-sets-section {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  gap: 8px;
}

.correct-set-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 0 1rem;
  border-radius: 6px;
  font-size: 0.75rem;
  line-height: 25px;
  text-transform: uppercase;
  z-index: 1;
  animation-fill-mode: forwards;
  overflow: hidden;
  width: 96vw;
  max-width: calc(3 * 8px + 4 * 100px);
  min-width: 0;
  color: #000;
  flex-grow: 1;
}

.word-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 8px;
  width: 96vw;
  max-width: calc(3 * 8px + 4 * 100px);
}

.word-grid-default {
  grid-template-rows: repeat(4, 1fr);
  /* height: calc(3 * 8px + 4 * 100px); */
}

.word-grid-3-rows {
  grid-template-rows: repeat(3, 1fr);
  /* height: calc(2 * 8px + 3 * 100px); */
}

.word-grid-2-rows {
  grid-template-rows: repeat(2, 1fr);
  /* height: calc(1 * 8px + 2 * 100px); */
}

.word-grid-1-row {
  grid-template-rows: repeat(1, 1fr);
  /* height: calc(1 * 100px); */
}

.word-button {
  display: flexbox;
  align-items: center;
  justify-content: center;
  padding: 0 0.5rem;
  flex-wrap: wrap;
  overflow: hidden;
  cursor: pointer;
  border: none;
  border-radius: 6px;
  font-family: 'Plush Regular', sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
  aspect-ratio: 1;
  max-width: 100px;
}

.play-page-mistakes-section {
  padding: 0.75rem 0;
  margin: 0 0.5rem;
}

.play-page-mistakes-section p {
  display: inline;
}

.play-page-btn-section {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin: 0 0.5rem;
}

.play-page-btn {
  font-family: 'Plush Regular', sans-serif;
  font-size: 16px;
  font-weight: 600;
  display: flex;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 5.5em;
  height: 3em;
  text-align: center;
  justify-content: center;
  align-items: center;
  padding: 1rem 1rem;
  max-width: 80vw;
  border-radius: 32px;
  line-height: 1.5em;
  cursor: pointer;
  border: 1px solid;
  background-color: #fff;
  color: #000;
  border-color: #000;
}

.play-page-btn[disabled=disabled], button:disabled {
  pointer-events: none;
  background-color: #fff;
  color: #7f7f7f;
  border-color: #7f7f7f;
}

/* GAME CREATION PAGE */

.input-section {
  padding: 0.75rem;
}

.sets-input-section {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
  max-width: 1200px;
}

.set-input-card-container {
  max-width: 260px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  justify-self: center;
}

.set-input-title {
  padding-bottom: 1.6rem;
}

.set-input-sets {
  display: flex;
  flex-direction: column;
  margin: 0;
}

.set-input-sets-input {
  margin: 0.33rem auto;
}

.info-input-section {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}




/* LOADING SPINNER */


.spinner-container {
  height: 75vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

@keyframes spinner {
  0% {
      transform: rotate(0deg);
  }
  100% {
      transform: rotate(360deg);
  }
}

.loading-spinner {
  width: 40px;
  height: 40px;
  border: 8px solid #FFFEF7;
  border-top: 8px solid #DA704B;
  border-radius: 50%;
  animation: spinner 1.5s linear infinite;
}

/* LINKS */

a {
  text-decoration: none;
}
a:link { 
  text-decoration: none; 
} 
a:visited { 
  text-decoration: none; 
} 
a:hover { 
  text-decoration: none; 
} 
a:active { 
  text-decoration: none; 
}

/* MEDIA-QUERIES */

@media screen and (max-width: 350px) {
  .correct-set-container {
    font-size: 0.6rem;
  }
}

@media screen and (max-width: 475px) {

  .correct-set-container {
    /* max-width: calc(100vw - 1rem); */
    /* min-width: 0; */
    overflow: hidden; 
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .word-button {
    width: auto;
  }

}

@media screen and (max-width: 768px) {

  /* .game-selection-tile {
    width: 116px;
  } */

  /* .game-selection-tile-title {
    font-size: 1.1rem;
  } */

  .star-rating-num {
    font-size: 0.8rem;
    top: 2px;
    line-height: 1.4;
  }
}

